--- a/aman_fw16_236-master/unit-4/sprint-3/day-4/assignments/react-cart-3/package.json
+++ b/aman_fw16_236-master/unit-4/sprint-3/day-4/assignments/react-cart-3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "huzaifa-sheikh",
+  "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
   "keywords": [
